[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "klave"
description = "This package name is reserved by Klave"
license = { text = "MIT" }
dependencies = []
requires-python = ">= 3.9"
authors = [
  {email = "python@klave.com"},
]
maintainers = [
  {name = "Florian Guitton", email = "florian@secretarium.org"}
]
keywords = ["Klave", "Connector", "Honest Computing"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
dynamic = ["version"]

[project.urls]
Homepage = "https://klave.com/python"